# llm-primer

./: .gitignore  LICENSE  main.py  pyproject.toml
01-token_journey/: 01-1-token_what_and_where.ipynb  01-2-token_why_computable.ipynb  01-3-token_generates_token.ipynb  01-4-image_to_token.ipynb  01-5-video_to_token.ipynb  01-6-audio_to_token.ipynb  01-7-full_duplex_multimodal.ipynb  multimodal_tokens.ipynb  token_journey.ipynb  扩展阅读1-mtp_speculative_decoding.ipynb
