[project]
name = "llmprimer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "modelscope>=1.37.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
